# UMassCDS_Streamlit_clone

./: CHANGELOG.md  LICENSE  README.md  app.py  config.py  pyproject.toml  requirements.txt  streamlit_template_conda.yml  streamlit_template_pip.yml
data/: public_postsecondary_awards_conferred_by_institution_20260125.csv
pages/: degrees_by_institution.py  degrees_over_time.py
streamlit_template_pkg/: data_utils.py  visualizations.py
tests/: conftest.py  test_data_utils.py
tests/test_data/: sample_data.csv
